Update FontAwesome to 6.4.0

--- a/views/layout_mobile.haml
+++ b/views/layout_mobile.haml
@@ -17,7 +17,8 @@
     <meta property="og:description" content="The NetHack Cross-Variant Summer Tournament" />
     <meta property="og:image" content="#{request.scheme}://junethack.net/apple-touch-icon.png" />
     <link rel="alternate" type="application/rss+xml" title="Junethack" href="#{request.scheme}://junethack.net/junethack.rss" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link href="/fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="/fontawesome/css/solid.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Turn off telephone number detection on iOS. -->
     <meta name="format-detection" content="telephone=no">
