--- a/views/layout.haml
+++ b/views/layout.haml
@@ -17,9 +17,9 @@
     <meta property="og:description" content="The NetHack Cross-Variant Summer Tournament" />
     <meta property="og:image" content="#{request.scheme}://junethack.net/apple-touch-icon.png" />
     <link rel="alternate" type="application/rss+xml" title="Junethack" href="#{request.scheme}://junethack.net/junethack.rss" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link href="/fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="/fontawesome/css/solid.css" rel="stylesheet">
     /[if lt IE 9] %script {:src => "http://html5shim.googlecode.com/svn/trunk/html5.js"}
-
   %body
     /[if lt IE 7] <p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p>
     #container
