--- a/views/layout.haml
+++ b/views/layout.haml
@@ -19,6 +19,7 @@
     <link rel="alternate" type="application/rss+xml" title="Junethack" href="#{request.scheme}://junethack.net/junethack.rss" />
     <link href="/fontawesome/css/fontawesome.css" rel="stylesheet">
     <link href="/fontawesome/css/solid.css" rel="stylesheet">
+    <script src="/javascript.js"></script>
     /[if lt IE 9] %script {:src => "http://html5shim.googlecode.com/svn/trunk/html5.js"}
   %body
     /[if lt IE 7] <p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p>
