--- a/views/layout_mobile.haml
+++ b/views/layout_mobile.haml
@@ -19,6 +19,7 @@
     <link rel="alternate" type="application/rss+xml" title="Junethack" href="#{request.scheme}://junethack.net/junethack.rss" />
     <link href="/fontawesome/css/fontawesome.css" rel="stylesheet">
     <link href="/fontawesome/css/solid.css" rel="stylesheet">
+    <script src="/javascript.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Turn off telephone number detection on iOS. -->
     <meta name="format-detection" content="telephone=no">
