--- a/views/trophy_scoreboard.haml
+++ b/views/trophy_scoreboard.haml
@@ -1,8 +1,7 @@
 %section.content_bulk
   .text_content_wrapper
     %section.text_content
-      %h2
-        Trophy scoreboard
+      =h2_with_expand_icon "Trophy scoreboard"
     %section#variant_navigation_list.text_content
       %ul.list
         %li
