Link conducts to FAQ entry

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -102,7 +102,7 @@
           %li#c-most-conducts
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/c-most-conducts.png"}
             %span
-              Most conducts in a single ascension
+              Most conducts in a single ascension (only the <a href="https://nethackwiki.com/wiki/Junethack/FAQ#Conducts">12 standard conducts</a> are monitored)
           %li#c-longest-streak
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/c-longest-streak.png"}
             %span
@@ -147,7 +147,7 @@
           %li#clan-full-conducts-broken
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/clan-full-conducts-broken.png"}
             %span
-              Most games with all conducts broken
+              Most games with all conducts broken (only the <a href="https://nethackwiki.com/wiki/Junethack/FAQ#Conducts">12 standard conducts</a> are monitored)
           -#%li#clan-lowest-turns-for-monster-kills
           -#  %img{style: "vertical-align:middle", alt: "", src: "/icons/clan-lowest-turns-for-monster-kills.png"}
           -#  %span
