--- a/views/registrationdate.haml
+++ b/views/registrationdate.haml
@@ -2,4 +2,4 @@
 - day = t.strftime('%d').to_i
 - month = t.strftime('%B ')
 - signupstart = "#{month} #{day}"+([nil,'st','nd','rd'][((day)%10)]||'th')
-Registration opens on #{signupstart}
+Registration will open on #{signupstart}
