--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,7 +5,7 @@
     %link{href: "/style.css",       rel: "stylesheet", type: "text/css"}/
     %link{href: "/back-to-top.css", rel: "stylesheet", type: "text/css"}/
     - games_count = Game.count :conditions => [ 'user_id > 0' ]
-    - if Time.now.to_i < $tournament_signupstarttime
+    - if $tournament_signupstarttime.nil? || Time.now.to_i < $tournament_signupstarttime
       %title= 'Junethack 2025'
     - elsif games_count == 0 then
       %title= "Junethack 2025 - #{User.count} players already registered!"
